# waddle

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  README.md  codecov.yaml  pyproject.toml
.github/workflows/: ci.yml  release-tests.yml
scripts/: install-all-tools.sh  install-deep-filter.sh  install-whisper-cpp.sh  setup-waddle.sh  transcribe.sh
src/waddle/: __main__.py  argparse.py  audacity.py  config.py  metadata.py  metadata_test.py  process.py  processor.py  test_metadata.py  utils.py  utils_test.py
src/waddle/audios/: __init__.py  align_offset.py  align_offset_test.py  audio_io.py  audio_io_test.py  call_tools.py  call_tools_test.py  chunk_utils.py  clip.py  clip_test.py  effects.py  enhancer.py  enhancer_test.py  split_quiet.py  split_quiet_test.py
src/waddle/processing/: __init__.py  combine.py  combine_test.py  segment.py  segment_test.py
src/waddle/processing/combine_tests/: audio_files_test.py  segments_test.py  srt_test.py  timeline_test.py
src/waddle/tools/: install_all_tools.py  install_deep_filter.py  install_whisper_cpp.py
stubs/: wave.pyi
stubs/librosa/: __init__.pyi
stubs/mutagen/: __init__.pyi
stubs/mutagen/id3/: __init__.pyi  _frames.pyi  _specs.pyi
stubs/pydub/: __init__.pyi  effects.pyi  silence.pyi
stubs/pytest/: __init__.pyi
stubs/scipy/: __init__.pyi
stubs/scipy/io/: __init__.pyi
stubs/soundfile/: __init__.pyi
stubs/unittest/: __init__.pyi  mock.pyi
tests/: integration_test.py
tests/ep0/: ep12-masa.m4a  ep12.md
