[project]
name = "waddle"
version = "0.1.0"
description = "A podcast preprocessing library for aligning, normalizing, and transcribing audio files."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [
    { name = "Masamune Ishihara", email = "mwishiha@ucsc.edu" }
]
dependencies = [
    "chardet>=5.2.0",
    "fastdtw>=0.3.4",
    "librosa>=0.10.2.post1",
    "matplotlib>=3.10.0",
    "numpy==1.26.4",
    "polars>=1.17.1",
    "pydub>=0.25.1",
    "soundfile>=0.12.1",
    "torch>=2.5.1",
    "tqdm>=4.67.1",
]
[project.scripts]
waddle = "waddle.__main__:main"
