[project]
name = "waddle"
version = "0.1.0"
description = "A podcast preprocessing library for aligning, normalizing, and transcribing audio files."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Masamune Ishihara", email = "mwishiha@ucsc.edu" }]
dependencies = [
    "chardet>=5.2.0",
    "fastdtw>=0.3.4",
    "librosa>=0.10.2.post1",
    "matplotlib>=3.10.0",
    "numpy==1.26.4",
    "polars>=1.17.1",
    "pydub>=0.25.1",
    "pytest-cov>=6.0.0",
    "soundfile>=0.12.1",
    "torch>=2.5.1",
    "tqdm>=4.67.1",
]
[project.scripts]
waddle = "waddle.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/waddle"]
    
[tool.hatch.envs.default.scripts]
cli = "uv run python src/waddle/__main__.py {args}"
lint-test = "uv ruff check --fix | uv run pytest --cov=src --cov-report=html --cov-report=term-missing --cov-config=pyproject.toml"

[dependency-groups]
dev = [
    "pytest>=8.3.4",
    "ruff>=0.9.5",
]

[tool.coverage.run]
source = ["src"]
omit = ["*/tests/*", "*_test.py"]
