[project]
name = "waddle"
version = "0.1.0"
description = "A podcast preprocessing library for aligning, normalizing, and transcribing audio files."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Masamune Ishihara", email = "mwishiha@ucsc.edu" }]
dependencies = [
    "librosa>=0.10.2.post1",
    "numpy==1.26.4",
    "pydub>=0.25.1",
    "soundfile>=0.12.1",
    "tqdm>=4.67.1",
]

[project.scripts]
waddle = "waddle.__main__:main"

[tool.uv]
package = true


[dependency-groups]
dev = [
    "pyright>=1.1.394",
    "pytest>=8.3.4",
    "pytest-cov>=6.0.0",
    "ruff>=0.9.5",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E", # pycodestyle errors
    "W", # pycodestyle warnings
    "F", # pyflakes
    "I", # isort
    "B", # flake8-bugbear
]

[tool.coverage.run]
source = ["src"]
omit = ["*/tests/*", "*_test.py"]

[tool.pyright]
venvPath = "."
venv = ".venv"
pythonVersion = "3.12"
typeCheckingMode = "basic" # TODO: Change to "strict" after fixing basic issues
reportMissingImports = true
reportMissingTypeStubs = false
useLibraryCodeForTypes = true
include = ["src", "tests"]
